feat: send mail

--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ DB_URI=mongodb+srv://liorionnguyen:haoKZI7buZbHGTs0@medimanager.yv0rhqi.mongodb.
 PORT=8000
 JWT_SECRET_KEY=liorion
 
+URL_Bucket_Firebase=medimanager-liorion.appspot.com
+
 ACCOUNT_MAIL=stu715105031@hnue.edu.vn
 PASSWORD_MAIL=Chugg203
