--- a/package.json
+++ b/package.json
@@ -26,9 +26,14 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "firebase-admin": "^12.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
