--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "firebase-admin": "^12.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "passport-local": "^1.0.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
