--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/main.js",
+        "src": "src/main.ts",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/dist/main.js"
+        "src": "src/main.ts",
+        "dest": "@vercel/node"
       }
     ]
   }
-  
