--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ GOOGLE_TOKEN_URI=https://oauth2.googleapis.com/token
 GOOGLE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 GOOGLE_CLIENT_X509_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-17ors%40medimanager-liorion.iam.gserviceaccount.com
 GOOGLE_UNIVERSE_DOMAIN=googleapis.com
+API_KEY_GG=AIzaSyD-HhpdxDVbveKiERci2tKlhfSmYeRIu3k
